--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-three/fiber": "^9.5.0",
     "@types/three": "^0.182.0",
     "framer-motion": "^12.34.1",
+    "lenis": "^1.3.17",
     "lucide-react": "^0.574.0",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
