--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^12.34.1",
     "lenis": "^1.3.17",
     "lucide-react": "^0.574.0",
+    "microcms-js-sdk": "^3.3.0",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
     "react": "19.2.3",
